tests/programs/invalid/unary_plus.java
public class unary_plus {
  public int m(int x) {
    return +x; 
  }
}